--- a/Aaaka-plastics/assets/css/menu2.css
+++ b/Aaaka-plastics/assets/css/menu2.css
@@ -1,321 +1,256 @@
-/* Google Fonts Import Link */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+body{
+  overflow-y: hidden;
+}
+.side_container {
+    width: 269px;
+    height: 903px;
+    margin-top: 64px;
+    margin-left: 64px;
 }
 
-.sidebar {
-  position: fixed;
-  height: 100%;
-  width: 295px;
-  z-index: 100;
-  top: 0;
-  left: 0;
-  background: #11101d;
-  transition: all 0.5s ease;
+.profile {
+    width: 269px;
+    height: 92px;
+    border-radius: 16px;
+    background: #DCE8F5;
+    border: 1px solid #DCE8F5;
 }
 
-.sidebar.close {
-  width: 78px;
+.info {
+    width: 207px;
+    height: 64px;
+    margin-top: 14px;
+    margin-left: 20px;
 }
 
-.sidebar .logo-details {
-  height: 60px;
-  width: 100%;
-  display: flex;
-  align-items: center;
+.img {
+    width: 64px;
+    height: 64px;
+    margin-top: 0px;
+    margin-left: 0px;
+    border-radius: 50%;
+    overflow: hidden;
+    
 }
 
-.sidebar .logo-details i {
-  font-size: 30px;
-  color: #fff;
-  height: 50px;
-  min-width: 78px;
-  text-align: center;
-  line-height: 50px;
+.text {
+    width: 127px;
+    height: 56px;
+    margin-top: -62px;
+    margin-left: 72px;
 }
 
-.sidebar .logo-details .logo_name {
-  font-size: 22px;
-  color: #fff;
-  font-weight: 600;
-  transition: 0.3s ease;
-  transition-delay: 0.1s;
+.name {
+    width: 127px;
+    height: 35px;
+    font-family: Manrope;
+    font-size: 26px;
+    font-weight: 700;
+    line-height: 35px;
+    letter-spacing: 0em;
+    text-align: left;
 }
 
-.sidebar.close .logo-details .logo_name {
-  transition-delay: 0s;
-  opacity: 0;
-  pointer-events: none;
+.pos {
+    width: 96px;
+    height: 25px;
+    font-family: Manrope;
+    font-size: 17px;
+    font-weight: 500;
+    line-height: 25px;
+    letter-spacing: 0.01em;
+    text-align: left;
 }
 
-.sidebar .nav-links {
-  height: 100%;
-  padding: 30px 0 150px 0;
-  overflow: auto;
+
+
+.menu {
+    width: 269px;
+    height: 425px;
+    margin-top: 10px;
+    position: relative;
 }
 
-.sidebar.close .nav-links {
-  overflow: visible;
+.mainbt {
+    width: 263px;
+    height: 25px;
+    font-family: Manrope;
+    font-size: 17px;
+    font-weight: 500;
+    line-height: 25px;
+    letter-spacing: 0.01em;
+    text-align: left;
+   
 }
 
-.sidebar .nav-links::-webkit-scrollbar {
-  display: none;
+.mainbt a {
+    text-decoration: none;
 }
 
-.sidebar .nav-links li {
-  position: relative;
-  list-style: none;
-  transition: all 0.4s ease;
+
+.drop {
+    width: 269px;
+    margin-top: 35px;
+    position: relative;
+    background: #DCE8F5;
+    border-radius: 11px;
+    font-family: Manrope;
+    font-size: 17px;
+    font-weight: 500;
+    line-height: 25px;
+    letter-spacing: 0.01em;
+    text-align: left;
+
 }
 
-.sidebar .nav-links li:hover {
-  background: #1d1b31;
+.drop1 {
+    width: 269px;
+    margin-top: 16px;
+    position: relative;
+    background: #DCE8F5;
+    border-radius: 11px;
+    font-family: Manrope;
+    font-size: 17px;
+    font-weight: 500;
+    line-height: 25px;
+    letter-spacing: 0.01em;
+    text-align: left;
+
 }
 
-.sidebar .nav-links li .iocn-link {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+.nav-links {
+    padding: 0;
+    margin: 0;
+    list-style: none;
 }
 
-.sidebar.close .nav-links li .iocn-link {
-  display: block;
+.nav-links li {
+    position: relative;
+    list-style-type: none;
 }
 
-.sidebar .nav-links li i {
-  height: 50px;
-  min-width: 78px;
-  text-align: center;
-  line-height: 50px;
-  color: #fff;
-  font-size: 20px;
-  cursor: pointer;
-  transition: all 0.3s ease;
+.nav-links a {
+    display: block;
+    text-decoration: none;
+    color: #000;
 }
 
-.sidebar .nav-links li.showMenu i.arrow {
-  transform: rotate(-180deg);
+.sub-menu {
+    display: none;
+    position: relative;
+    top: 100%;
+    z-index: 1;
+    width: 85%;
+    background: #DCE8F5;
+    border-radius: 11px;
+    font-family: Manrope;
+    font-size: 17px;
+    font-weight: 500;
+    line-height: 25px;
+    letter-spacing: 0.01em;
+    text-align: left;
+
 }
 
-.sidebar.close .nav-links i.arrow {
-  display: none;
+.nav-links li:hover .sub-menu {
+    display: block;
 }
 
-.sidebar .nav-links li a {
-  display: flex;
-  align-items: center;
-  text-decoration: none;
+.sub-menu a {
+    padding: 10px;
+    display: block;
+    text-decoration: none;
+    color: #000;
+}
+.mainbt i{
+    height: 50px;
+    min-width: 78px;
+    text-align: center;
+    line-height: 50px;
+    color: black;
+    font-size: 20px;
+    cursor: pointer;
+    transition: all 0.3s ease;
 }
 
-.sidebar .nav-links li a .link_name {
-  font-size: 18px;
-  font-weight: 400;
-  color: #fff;
-  transition: all 0.4s ease;
+.nav-links i{
+    height: 50px;
+    min-width: 78px;
+    text-align: center;
+    line-height: 50px;
+    color: black;
+    font-size: 20px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+.nav-links li .iocn-link{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
-.sidebar.close .nav-links li a .link_name {
-  opacity: 0;
-  pointer-events: none;
+.user {
+    width: 269px;
+    height: 276px;
+    margin-top: 26px;
+    margin-left: 0px;
+    position: relative;
 }
 
-.sidebar .nav-links li .sub-menu {
-  padding: 6px 6px 14px 80px;
-  margin-top: -10px;
-  background: #1d1b31;
-  display: none;
+.add {
+    width: 24px;
+    height: 24px;
+    margin-left: 227px;
+    margin-top: -25px;
 }
 
-.sidebar .nav-links li.showMenu .sub-menu {
-  display: block;
+.hd {
+    width: 269px;
+    height: 26px;
+    font-family: Manrope;
+    font-size: 17px;
+    font-weight: 600;
+    line-height: 25px;
+    letter-spacing: 0.01em;
+    text-align: left;
 }
 
-.sidebar .nav-links li .sub-menu a {
-  color: #fff;
-  font-size: 15px;
-  padding: 5px 0;
-  white-space: nowrap;
-  opacity: 0.6;
-  transition: all 0.3s ease;
+.user .list {
+    width: 253px;
+    height: 240px;
+    margin-top: 9px;
 }
 
-.sidebar .nav-links li .sub-menu a:hover {
-  opacity: 1;
+.uname_list {
+    width: 253px;
+    height: 48px;
+    margin-top: 5px;
+    border-radius: 8px;
+    background: #DCE8F5;
+    display: flex;
+    justify-content: space-around;
+
 }
 
-.sidebar.close .nav-links li .sub-menu {
-  position: absolute;
-  left: 100%;
-  top: -10px;
-  margin-top: 0;
-  padding: 10px 20px;
-  border-radius: 0 6px 6px 0;
-  opacity: 0;
-  display: block;
-  pointer-events: none;
-  transition: 0s;
+.uname_list .icon {
+    height: 24px;
+    margin-top: 11px;
+    font-size: 23px;
 }
 
-.sidebar.close .nav-links li:hover .sub-menu {
-  top: 0;
-  opacity: 1;
-  pointer-events: auto;
-  transition: all 0.4s ease;
+.uname_list .uname {
+    width: 145px;
+    height: 25px;
+    margin-top: 10px;
+    margin-left: -40px;
+    font-family: Manrope;
+    font-size: 17px;
+    font-weight: 500;
+    line-height: 25px;
+    letter-spacing: 0.01em;
+    text-align: left;
 }
 
-.sidebar .nav-links li .sub-menu .link_name {
-  display: none;
-}
 
-.sidebar.close .nav-links li .sub-menu .link_name {
-  font-size: 18px;
-  opacity: 1;
-  display: block;
-}
 
-.sidebar .nav-links li .sub-menu.blank {
-  opacity: 1;
-  pointer-events: auto;
-  padding: 3px 20px 6px 16px;
-  opacity: 0;
-  pointer-events: none;
-}
 
-.sidebar .nav-links li:hover .sub-menu.blank {
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-.sidebar .profile-details {
-  bottom: 0;
-  height: 100;
-  display: flex;
-  background: black;
-  padding: 12px 0;
-  transition: all 0.5s ease;
-}
-
-.sidebar .nav-links {
-  height: 100%;
-  padding: 30px 0 150px 0;
-  overflow: auto;
-}
-
-.sidebar.close .profile-details {
-  background: none;
-}
-
-.sidebar.close .profile-details {
-  width: 78px;
-}
-
-.sidebar .profile-details .profile-content {
-  display: flex;
-  align-items: center;
-}
-
-.sidebar .profile-details img {
-  height: 52px;
-  width: 52px;
-  object-fit: cover;
-  border-radius: 16px;
-  margin: 0 14px 0 12px;
-  background: #1d1b31;
-  transition: all 0.5s ease;
-}
-
-.sidebar.close .profile-details img {
-  padding: 10px;
-}
-
-.sidebar .profile-details .profile_name,
-.sidebar .profile-details .job {
-  color: #fff;
-  font-size: 12px;
-  font-weight: 500;
-  white-space: nowrap;
-}
-
-.sidebar.close .profile-details i,
-.sidebar.close .profile-details .profile_name,
-.sidebar.close .profile-details .job {
-  display: none;
-}
-
-.sidebar .profile-details .job {
-  font-size: 18px;
-}
-
-.home-section {
-  position: relative;
-  background: #E4E9F7;
-  height: 100vh;
-  left: 295px;
-  width: calc(100% - 295px);
-  transition: all 0.5s ease;
-}
-
-.sidebar.close ~ .home-section {
-  left: 78px;
-  width: calc(100% - 78px);
-}
-
-.home-section .home-content {
-  height: 60px;
-  display: flex;
-  align-items: center;
-}
-
-.home-section .home-content .bx-menu,
-.home-section .home-content .text {
-  color: #11101d;
-  font-size: 35px;
-}
-
-.home-section .home-content .bx-menu {
-  margin: 0 15px;
-  cursor: pointer;
-}
-
-.home-section .home-content .text {
-  font-size: 26px;
-  font-weight: 600;
-}
-
-@media (max-width: 992px) {
-  .sidebar {
-    width: 78px;
-  }
-
-  .sidebar.close {
-    width: 0;
-  }
-
-  .home-section {
-    left: 78px;
-    width: calc(100% - 78px);
-  }
-
-  .sidebar.close ~ .home-section {
-    width: 100%;
-    left: 0;
-  }
-}
-
-@media (max-width: 768px) {
-  .sidebar,
-  .home-section {
-    width: 100%;
-    left: 0;
-  }
-
-  .sidebar.close ~ .home-section {
-    width: 100%;
-    left: 0;
-  }
-}
