New UI Prototype

--- a/Aaaka-plastics/assets/css/accountmodify.css
+++ b/Aaaka-plastics/assets/css/accountmodify.css
@@ -2,9 +2,10 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    background-color: #e6f2ff;
 }
 header {
-    background-color: #222222;
+    background-color: #000000;
     color: #fff;
     padding: 10px;
     text-align: center;
@@ -12,6 +13,7 @@ header {
 .search-container {
     text-align: center;
     margin: 20px;
+    
 }
 
 input {
@@ -32,7 +34,7 @@ table {
 }
 
 th, td {
-    border: 1px solid #ddd;
+    border: 1px solid #120f0f;
     padding: 8px;
     text-align: left;
 }
