--- a/Aaaka-plastics/assets/css/bootstrap.css
+++ b/Aaaka-plastics/assets/css/bootstrap.css
@@ -70,7 +70,7 @@ body {
     line-height: 1.5;
     color: #212529;
     text-align: left;
-    background-color: #fff;
+    background-color: #E6F2FF;
 }
 
 [tabindex="-1"]:focus:not(:focus-visible) {
