--- a/Aaaka-plastics/assets/css/itemgroupmodify.css
+++ b/Aaaka-plastics/assets/css/itemgroupmodify.css
@@ -2,6 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    background-color: #e6f2ff;
 }
 
 header {
@@ -9,7 +10,7 @@ header {
     color: #fff;
     padding: 10px;
     text-align: center;
-}
+} 
 
 section {
     margin: 20px;
